# amisha_portfolio

./: .gitignore  index.html  package-lock.json  package.json  requirements.txt  vercel.json
api/: build_knowledge.py  index copy.py  index.py  pyproject.toml  rag_pipeline copy 2.py  rag_pipeline.py  requirements.txt  startup.py  upload_knowledge.py
api/extractors/: pdf_extractor.py  web_extractor.py
backend/: pyproject.toml  rag_pipeline copy.py
backend/data/: knowledge.txt
src/: App.css  App.jsx  main.jsx  particles-config.js  theme.js
src/components/: About.jsx  AnimatedSection.jsx  Contact.jsx  Education.jsx  Experience.jsx  Footer.jsx  Header.jsx  Home.jsx  ParticleBackground.jsx  Projects.jsx  RAGChat.jsx  Skills.jsx
